--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 
   <head>
@@ -94,7 +93,7 @@
             <li>Goes here</li>
             <li>Goes here</li>
           </ul>
-          <h3><a href="Contact-me.html">Contact Me</a></h3>
+          <h3><a href="./Contact-me.html">Contact Me</a></h3>
   </body>
 
 </html>
