--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <li>Goes here</li>
             <li>Goes here</li>
           </ul>
-          <h3><a href="./Contact-me.html">Contact Me</a></h3>
+          <h3><a href="contact-me.html">Contact Me</a></h3>
   </body>
 
 </html>
